Changed cdns and basically threw everything else away added new header and footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,7 @@
-
-body {
-    background-color: #ffee58;
+.page-footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
- footer {
-     text-align: center;
-     flex: 1 0 auto;
-     text-align: center;
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    background-color: #ffee58;
- }
-  
+
