Added creator information and centered the buttons with everything else on the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+body {
+    text-align: center;
+}
+.navbar-brand {
+    text-align: center;
+}
 .page-footer {
     position: sticky;
     left: 0;
