Made the images in the carousel the width of the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,8 +26,8 @@ body {
 
 .carousel-item {
 
-    width: 1110px;
-    height: 625px;
+    width: 100%;
+    height: 650px;
     object-fit: scale-down;
 }
 
