--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,5 +63,7 @@ body {
 .card {
     display: inline-block;
     margin-bottom: 20px;
-    box-shadow: 10px 10px 5px black
+    box-shadow: 10px 10px 5px black;
+    background-color:#212121e1;
+    
 }
