--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,9 @@ body {
     display: inline-block;
     margin-bottom: 20px;
     box-shadow: 10px 10px 5px black;
-    background-color:#212121e1;
-    
+    color: whitesmoke
+}
+
+h3 {
+    color: #b2ebf2
 }
