changed bio text color, changed navbar font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,3 +70,12 @@ body {
 h3 {
     color: #b2ebf2
 }
+
+.bio-text{
+    color: whitesmoke
+}
+
+.navbar-brand {
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 40px
+}
