--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,8 @@ body {
     display: inline-block;
     margin-bottom: 20px;
     box-shadow: 10px 10px 5px black;
-    color: whitesmoke
+    color: whitesmoke;
+    font-family: 'Fjalla One', sans-serif;
 }
 
 h3 {
