added a fun easter egg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,18 @@ body {
     width: 250px;
     height: 250px;
 }
+#avatar-one {
+    width: 250px;
+    height: 250px;
+}
+#avatar-two {
+    width: 250px;
+    height: 250px;
+}
+#avatar-three {
+    width: 250px;
+    height: 250px;
+}
 
 .food-image {
     width: 250px;
