--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,8 +37,6 @@ body {
     display: inline-block;
     column-count: 5;
     column-gap: 1em;
-    
-    
 }
 
 .jumbotron {
@@ -93,10 +91,21 @@ h3 {
     font-family: 'Fjalla One', sans-serif;
     font-size: 40px;
 }
-@media only screen and (max-width: 720px) {
+
+@media screen and (max-width: 768px) {
+    .carousel-item-next, .carousel-item-prev, .carousel-item.active {
+        height: 450px;
+    }
+  }
+
+@media screen and (max-width: 720px) {
     /* For mobile phones: */
    #food-results {
     display: flex;
     flex-wrap: wrap;
    }
+
+   .carousel-item-next, .carousel-item-prev, .carousel-item.active {
+	height: 225px;
+    }
   }
