--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,20 +92,36 @@ h3 {
     font-size: 40px;
 }
 
+/* For tablets */
 @media screen and (max-width: 768px) {
     .carousel-item-next, .carousel-item-prev, .carousel-item.active {
         height: 450px;
     }
+
+    #food-results {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    #food-results .card {
+        min-width: 100%;
+    }
+
   }
 
+/* For mobile phones */
 @media screen and (max-width: 720px) {
-    /* For mobile phones: */
    #food-results {
-    display: flex;
-    flex-wrap: wrap;
+        display: inline;
+        flex-wrap: wrap;
+        text-align: center;
+   }
+
+   #food-results .card {
+       min-width: 100%
    }
 
    .carousel-item-next, .carousel-item-prev, .carousel-item.active {
-	height: 225px;
+	    height: 225px;
     }
-  }
+}
